# ESP32-ADS1115-Logger

./: CMakeLists.txt  LICENSE  README.md
components/web_server/: CMakeLists.txt  index.html  list.html  logging.html  message.html  script.js  settings.c  settings.h  settings.html  style.css  web_server.c  web_server.h
main/: CMakeLists.txt  main.c  ws2812.c  ws2812.h
